bdev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bdev-ingress
  namespace: bdev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - beautiful.dev
      secretName: tls-secret
  rules:
    - host: beautiful.dev
      http:
        paths:
          - path: /mirror
            backend:
              serviceName: mirror
              servicePort: 80 
              #- path: /gitlab
              #backend:
              #serviceName: gitlab-ce
              #servicePort: 80
